ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ing
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:

  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world-svc
              port:
                number: 80
